# Ferret-Refitting

./: keys.txt
emp-ot/ferret/: base_cot.h  constants.h  ferret_cot.h  ferret_cot.hpp  ferret_cot_backup.hpp  mpcot_reg.h  spcot_recver.h  spcot_sender.h  ssd_f2.h  twokeyprp.h
emp-ot/ferret/quiet-bipsw/include/: bipsw.h  bipsw8.h
test/: CMakeLists.txt  base_cot.cpp  ferret.cpp  ot.cpp  test.h
